--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,115 +1,31 @@
-/*------------------------------footer-container----------------------------*/
-
-/*------------------------------footer-nav-bar----------------------------*/
-.main-footer nav{
+footer {
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-    background-color: rgb(51, 54, 255);
-    padding: 10px;
+    width: 100%;
+    font-size: 14px;
+    background-color: #FFC107;
+    padding: 0;
 }
 
-/*------------------------------articles-under-nav-bar----------------------------*/
-.footer-article {
-	display: flex;
-	flex-direction: column;
-	width: 15%;
+.main-footer {
+    padding-top: 3%;
+    margin: 0;
 }
-.footer-article .link, .footer-article h3{
-    color:rgba(180,180,180,1);
-    text-transform: uppercase;
+
+.lista {
     text-align: center;
     text-decoration: none;
-    padding: 1% 3%;
-    font-size: 1.5em;
-}
-
-.footer-article h3 {
-	color:white;
-}
-
-.footer-article .link {
-	font-size: 1.2em;
-}
-.footer-article a:hover{
-    color:white;
-}
-/*----------------------------column-1------------------------------*/
-
-/*----------------------------column-2------------------------------*/
-.column-2 {
-	align-items: center;
-}
-
-.column-2 .i{
-	text-decoration: none;
-	color:white;
-	font-size: 2em;
-	transition: transform(0.7s);
-}
-.column-2 .i:hover {
-	transform:scale(1.4);
+    list-style-type: none;
 
 }
 
-.contact-logo {
-	margin-top: 3%;
+.contactlist_item {
+    text-align: left;
+    padding: 0;
 }
-
-/*----------------------------column-3------------------------------*/
-/*-------------social-network---------------*/
-
-.social-network {
-	display: flex;
-	flex-direction: row;
-	padding: 0 5%;
-	justify-content: space-between;
-	margin-top: 10%;
-
-}
-.social-network a{
-	text-decoration: none;
-	color:white;
-	font-size: 2em;
-	transition: transform(0.7s);
-}
-.social-network a:hover {
-	transform:scale(1.4);
-
-}
-/*----------------------------column-4------------------------------*/
-
-/*-------------------------back-to-top-button-------------------------*/
-
-.backtop {
-	display: flex;
-    position: fixed;
-    bottom: 1%;
-	right: 1%;
-	font-size: 10px;
-
-}
-
-.backtop a {
-	color:black;
-	padding: 5px 10px;
-    background-color: white;
-    border:1px solid black;
-    border-radius: 50%;
-}
-
 
 /*-------------------------media-queries-------------------------- */
-
+/* 
 @media (max-width:480px){
-    .footer-article h3 {
-		color:white;
-		font-size: 1em;
-	}
-	.social-network a{
-		text-decoration: none;
-		color:white;
-		font-size: 1.7em;
-		transition: transform(0.7s);
-	}
-}
+  
+} */
