--- a/public/css/register.css
+++ b/public/css/register.css
@@ -2,11 +2,8 @@
 	background-image:url(../images/backgrounds/register-bg01.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-
 }
 
-
-    
     .form-control{
 		height: 40px;
 		width:100%;
@@ -54,9 +51,10 @@
     .formu1 form{
 		color: #999;
 		border-radius: 3px;
-    	margin-bottom: 15px;
-        background: #f2f3f7;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+		margin-bottom: 15px;
+		background: #FFC107;
+		border-radius: 3px;
+		box-shadow: 0px 4px 8px -5px rgba(0, 0, 0, 0.5);
         padding: 30px;
     }
 	.formu1 .form-group{
@@ -130,5 +128,5 @@
         width: 25px;
     }
     .form-group a {
-       color: #2ab13c;
-   }
+		color: #2ab13c;
+	}
