--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,6 +1,6 @@
 
 /*****************globals*************/
-body {
+/* body {
   font-family: 'open sans';
   overflow-x: hidden; }
 
@@ -178,5 +178,5 @@ img {
     height: 25vh;
   }
 }
-
+ */
 
